Map folder in docker

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,9 @@ USE_EMBEDS=true
 DISCORD_USERNAME=GH Release Bot
 DISCORD_AVATAR_URL=https://avatars.githubusercontent.com/u/9919
 
+# State directory for persistent storage (default: ./state)
+STATE_DIR=/state
+
 # HTTP & Logging
 HTTP_TIMEOUT=20
 LOG_LEVEL=INFO
