--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,16 @@ DISCORD_AVATAR_URL=https://avatars.githubusercontent.com/u/9919
 # State directory for persistent storage (default: ./state)
 STATE_DIR=/state
 
+# Logging configuration
+LOG_LEVEL=INFO
+LOG_TO_FILE=true
+LOG_DIR=/logs
+LOG_MAX_BYTES=10485760
+LOG_BACKUP_COUNT=5
+
+# PostgreSQL logging (optional)
+# POSTGRES_DSN=postgresql://user:password@localhost:5432/dbname
+# POSTGRES_TABLE=gh_watcher_logs
+
 # HTTP & Logging
 HTTP_TIMEOUT=20
-LOG_LEVEL=INFO
