Fix table name issue

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ LOG_BACKUP_COUNT=5
 # PostgreSQL logging (optional)
 # POSTGRES_DSN=postgresql://user:password@localhost:5432/dbname
 # POSTGRES_TABLE=gh_watcher_logs
+# Or with schema: POSTGRES_TABLE=monitoring.gh_watcher_logs
 
 # HTTP & Logging
 HTTP_TIMEOUT=20
